# dist-kv-store

./: .gitignore  README.md
MapReduce/: CMakeLists.txt  dir_layout.txt
MapReduce/data/: bookshelves.json  clean_books.py  fetch_ids.py  get_books.py
MapReduce/src/: client.cc  server.cc  utils.cc  utils.h
MapReduce/src/proto/: mapreduce.proto
TOB/: README.md  ack_handle.c  client  client_app.c  client_handle.c  client_handle.h  queue.h  server  server.c  server_mid.c  shared_buffer.txt
data_struct/: linked_list  linked_list.c  out  tempCodeRunnerFile.c
kv_consistency_models/: queue.c  server.c
mapreduce_py/: Makefile  README.md
mapreduce_py/mapreduce/protos/: mapreduce.proto
memcache_lite/: README.md  client.c  hashmap.c  hashmap.h  run_test1.sh  run_test1.txt  run_test2.sh  run_test2.txt  serv_v1.c  server.c  server_mt.c  threadqueue.c  threadqueue.h
